modifica elimina item - centralizzato - springboot